# grewpy

./: .gitignore  README.md  empty.conllu  graph.py  grew.py  json_grs.py  learner.py  network.py  pyproject.toml  setup.py  single.grs  teste.py  utils.py
docs/: .gitignore  conf.py  grew.rst  grewpy.rst  index.rst  modules.rst
examples/: README.md  allemand.py  antipatterns.py  classifier.py  invalid.py  json_grs.py  learner.py  lec.cpp  poc.py  rule_forgery.py  test_Fs_edge.ipynb  test_Fs_edge.py  test_GRS.py  test_corpus.py  test_graph.py  test_grew_web.py  test_mm.py  teste.py  teste2.py
examples/resources/: eval.conllu  fr_gsd-sud-test.conllu  fr_pud-sud-test.conllu  fr_pud-ud-test.conllu  pud_10.conllu  single.grs  test1.conllu  test1.grs
grew/: __init__.py  corpus.py  graph.py  grew.py  grs.py  network.py  utils.py
grewpy/: __init__.py  corpus.py  graph.py  grew.py  grew_web.py  grs.py  matchings.py  network.py  observation.py  sketch.py  utils.py
tests/: request.py  validation.py
tools/: Makefile  cg2dot.py
